# che-blender-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
mcpb/: PRIVACY.md  manifest.json
src/che_blender_mcp/: __init__.py  __main__.py  server.py
