[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "che-blender-mcp"
version = "0.1.0"
description = "MCP Server for Blender integration - execute scripts, capture renders, and control scenes"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
che-blender-mcp = "che_blender_mcp:main"
